Fix: Updated Java version to 17 and Lombok for Jenkins compatibility

--- a/pom.xml
+++ b/pom.xml
@@ -4,6 +4,12 @@
   <artifactId>HybridFrameworkAutomation</artifactId>
   <version>0.0.1-SNAPSHOT</version>
   
+  <properties>
+    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+    <maven.compiler.source>17</maven.compiler.source>
+    <maven.compiler.target>17</maven.compiler.target>
+</properties>
+  
   
   <dependencies>
     <dependency>
@@ -11,6 +17,13 @@
         <artifactId>selenium-java</artifactId>
         <version>4.21.0</version>
     </dependency>
+    
+    <dependency>
+    <groupId>org.projectlombok</groupId>
+    <artifactId>lombok</artifactId>
+    <version>1.18.30</version>
+    <scope>provided</scope>
+</dependency>
 
     <dependency>
         <groupId>org.testng</groupId>
